--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
           </figcaption>
           <div class="input__container">
-            <input id="input__title" type="text" placeholder="Digitar título do post">
-            <input id="input__text" type="text" placeholder="Digitar descrição do post">
+            <input class="text-1" id="input__title" type="text" placeholder="Digitar título do post">
+            <input class="text-1" id="input__text" type="text" placeholder="Digitar descrição do post">
 
             <button class="primary-button">Postar</button>
           </div>
